The version file is not meant to be with the repo
The cmake config creates the version header file from the
template but the output path was wrong. The actual header file was
meant to be ignored and recreated each time, but was still being tracked.

--- a/include/inch/CMakeLists.txt
+++ b/include/inch/CMakeLists.txt
@@ -26,6 +26,6 @@ set(HEADERS
 
 configure_file(
   "version.hpp.in"
-  "version.hpp"
+  "${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/version.hpp"
   @ONLY
   )
