Update gitignore and use correct type
- Emacs projectile package config file doesn't need to live with the
repo.
- The var width is a double, remind me by adding 2.0 and not 2

--- a/.gitignore
+++ b/.gitignore
@@ -33,14 +33,10 @@ include/inch/version.hpp
 *~
 **/.ccls-cache
 *.tmp
+.projectile
 
 # Qt Creator files
 CMakeLists.txt.user
-
-# Files created by the Makefile
-**/bin
-**/obj
-*.o
 
 # Catch all
 callgrind.out.*
