Upgrade limits from an enum to a full class
There were lots of places in the code where we either:
  - Pass 4 ints to access the range of N and Z
  - Do Max-Min to get the N or Z range
  - Pass the Options class to access min and max values

Encapsulating all of that in a Limits class make things simpler.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ set(SOURCES
   ${SOURCE_DIR}/grid.cpp
   ${SOURCE_DIR}/io.cpp
   ${SOURCE_DIR}/key.cpp
+  ${SOURCE_DIR}/limits.cpp
   ${SOURCE_DIR}/main.cpp
   ${SOURCE_DIR}/massTable.cpp
   ${SOURCE_DIR}/magicNumbers.cpp
