--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ jobs:
             git submodule init
             git submodule update --remote
       - run: cmake -GNinja -H. -B../Release-build -DINCH_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/g++-8 -DCMAKE_BUILD_TYPE=Release
-      - run: cmake --build ../Release-build
+      - run: cmake --build ../Release-build -j 2
       - run: cd ../Release-build && ctest -j2 -V
 
   build_clang_debug:
@@ -72,7 +72,7 @@ jobs:
             git submodule init
             git submodule update --remote
       - run: cmake -GNinja -H. -B../Debug-build -DINCH_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/clang++-8 -DCMAKE_BUILD_TYPE=Debug
-      - run: cmake --build ../Debug-build
+      - run: cmake --build ../Debug-build -j 2
       - run: cd ../Debug-build && ctest -j2 -V
 
   build_clang_release:
@@ -87,7 +87,7 @@ jobs:
             git submodule init
             git submodule update --remote
       - run: cmake -GNinja -H. -B../Release-build -DINCH_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/clang++-8 -DCMAKE_BUILD_TYPE=Release
-      - run: cmake --build ../Release-build
+      - run: cmake --build ../Release-build -j 2
       - run: cd ../Release-build && ctest -j2 -V
 
 workflows:
