--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,11 +18,11 @@ variables:
 
 # Generic commands for building
 .build__template: &Build
-  - cmake --build ./build
+  - cmake --build ../build
 
 # Generic commands for moving to the build directory and running tests
 .run_test_template: &RunTests
-  - cd build
+  - cd ../build
   - ctest -j2 -V
 
 # Which packages are required for GCC compilation
@@ -79,7 +79,7 @@ gcc-configure-Debug:
   extends: .configure_template
   script:
     - *GCCPackages
-    - cmake -H. -B./build -GNinja -DINCH_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/g++-$GCC_VERSION -DCMAKE_BUILD_TYPE=Debug
+    - cmake -H. -B../build -GNinja -DINCH_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/g++-$GCC_VERSION -DCMAKE_BUILD_TYPE=Debug
 
 gcc-build-Debug:
   extends: .build_template
@@ -103,7 +103,7 @@ gcc-configure-Release:
   extends: .configure_template
   script:
     - *GCCPackages
-    - cmake -H. -B./build -GNinja -DINCH_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/g++-$GCC_VERSION -DCMAKE_BUILD_TYPE=Release
+    - cmake -H. -B../build -GNinja -DINCH_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/g++-$GCC_VERSION -DCMAKE_BUILD_TYPE=Release
 
 gcc-build-Release:
   extends: .build_template
@@ -127,7 +127,7 @@ clang-configure-Debug:
   extends: .configure_template
   script:
     - *ClangPackages
-    - cmake -H. -B./build -GNinja -DINCH_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/clang++-$CLANG_VERSION -DCMAKE_BUILD_TYPE=Debug
+    - cmake -H. -B../build -GNinja -DINCH_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/clang++-$CLANG_VERSION -DCMAKE_BUILD_TYPE=Debug
 
 clang-build-Debug:
   extends: .build_template
@@ -151,7 +151,7 @@ clang-configure-Release:
   extends: .configure_template
   script:
     - *ClangPackages
-    - cmake -H. -B./build -GNinja -DINCH_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/clang++-$CLANG_VERSION -DCMAKE_BUILD_TYPE=Release
+    - cmake -H. -B../build -GNinja -DINCH_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/clang++-$CLANG_VERSION -DCMAKE_BUILD_TYPE=Release
 
 clang-build-Release:
   extends: .build_template
