More fixes for derived class testing

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -16,6 +16,7 @@ set(TEST_SOURCES
   chart_test.cpp
   converter_test.cpp
   dripline_test.cpp
+  eps_dripline_test.cpp
   eps_chart_test.cpp
   grid_test.cpp
   io_test.cpp
