RProcess derived class testing

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -18,6 +18,7 @@ set(TEST_SOURCES
   dripline_test.cpp
   eps_dripline_test.cpp
   eps_chart_test.cpp
+  eps_rProcess_test.cpp
   grid_test.cpp
   io_test.cpp
   key_test.cpp
