--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,8 +65,8 @@ jobs:
       - run: sudo apt update && sudo apt install -y git cmake ninja-build gcc g++ gcc-8 g++-8
       - full_checkout
       - run: cmake -GNinja -H. -B../Release-build -DINCH_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/g++-8 -DCMAKE_BUILD_TYPE=Release
-      - run: cmake --build ../Release-build -j 2
-      - run: cd ../Release-build && ctest -j2 -V
+      - build_and_test:
+          dir: ../Release-build
 
   build_clang_debug:
     docker:
@@ -75,8 +75,8 @@ jobs:
       - run: sudo apt update && sudo apt install -y git cmake ninja-build clang clang-8 libstdc++-8-dev
       - full_checkout
       - run: cmake -GNinja -H. -B../Debug-build -DINCH_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/clang++-8 -DCMAKE_BUILD_TYPE=Debug
-      - run: cmake --build ../Debug-build -j 2
-      - run: cd ../Debug-build && ctest -j2 -V
+      - build_and_test:
+          dir: ../Debug-build
 
   build_clang_release:
     docker:
@@ -85,8 +85,8 @@ jobs:
       - run: sudo apt update && sudo apt install -y git cmake ninja-build clang clang-8 libstdc++-8-dev
       - full_checkout
       - run: cmake -GNinja -H. -B../Release-build -DINCH_UNIT_TESTS=ON -DCMAKE_CXX_COMPILER=/usr/bin/clang++-8 -DCMAKE_BUILD_TYPE=Release
-      - run: cmake --build ../Release-build -j 2
-      - run: cd ../Release-build && ctest -j2 -V
+      - build_and_test:
+          dir: ../Release-build
 
 workflows:
   version: 2.1
