--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ commands:
 jobs:
   build_gcc_debug:
     docker:
-      - image: circleci/buildpack-deps:eoan
+      - image: circleci/buildpack-deps:focal
     steps:
       - run:
           name: "Install required packages"
@@ -60,7 +60,7 @@ jobs:
 
   build_gcc_release:
     docker:
-      - image: circleci/buildpack-deps:eoan
+      - image: circleci/buildpack-deps:focal
     steps:
       - run: sudo apt update && sudo apt install -y git cmake ninja-build gcc g++
       - full_checkout
@@ -70,7 +70,7 @@ jobs:
 
   build_clang_debug:
     docker:
-      - image: circleci/buildpack-deps:eoan
+      - image: circleci/buildpack-deps:focal
     steps:
       - run: sudo apt update && sudo apt install -y git cmake ninja-build clang llvm
       - full_checkout
@@ -80,7 +80,7 @@ jobs:
 
   build_clang_release:
     docker:
-      - image: circleci/buildpack-deps:eoan
+      - image: circleci/buildpack-deps:focal
     steps:
       - run: sudo apt update && sudo apt install -y git cmake ninja-build clang llvm
       - full_checkout
