--- a/.github/workflows/cmake_build.yml
+++ b/.github/workflows/cmake_build.yml
@@ -19,26 +19,22 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        version: [9]
         compiler: [clang++, g++]
         type: [Debug, Release]
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Checkout submodules
-        shell: bash
-        run: |
-          # If your submodules are configured to use SSH instead of HTTPS please uncomment the following line
-          # git config --global url."https://github.com/".insteadOf "git@github.com:"
-          auth_header="$(git config --local --get http.https://github.com/.extraheader)"
-          git submodule sync --recursive
-          git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
-        # We currently compile against C++17 so default gcc and clang on ubuntu-latest are too old
+      - uses: actions/checkout@v4
+        with:
+          submodules: true
+
       - name: Install dependencies
-        run: sudo apt update && sudo apt install -y ninja-build clang gcc-${{ matrix.version }} g++-${{ matrix.version }} clang-${{ matrix.version }}
+        run: sudo apt update && sudo apt install -y cmake ninja-build clang gcc g++ clang
+
       - name: Configure
-        run: cmake -GNinja -H. -B../Build -DCMAKE_CXX_COMPILER=/usr/bin/${{ matrix.compiler }}-${{ matrix.version }} -DCMAKE_BUILD_TYPE=${{ matrix.type }}
+        run: cmake -GNinja -H. -B../Build -DINCH_UNITS_TEST=ON -DCMAKE_CXX_COMPILER=/usr/bin/${{ matrix.compiler }}-${{ matrix.version }} -DCMAKE_BUILD_TYPE=${{ matrix.type }}
+
       - name: Build
         run: cmake --build ../Build
+
       - name: Test
         run: cd ../Build && ctest -j2 -V
